Creacion de vistas de productos y sucursales

--- a/src/app/componentes/navbar/navbar.component.html
+++ b/src/app/componentes/navbar/navbar.component.html
@@ -6,7 +6,7 @@
 				<div class="col-12">
 					<nav class="navbar navbar-expand-md navbar-light">
 
-						<a class="navbar-brand" href="https://front.codes/" target="_blank"><img src="https://assets.codepen.io/1462889/fcy.png" alt=""></a>
+						<a class="navbar-brand" class="nav-link" routerLink='/inicio' routerLinkActive="active" ><img src="https://1.bp.blogspot.com/-iQ5bBXPr8gI/XWw5s9oJ5CI/AAAAAAAABCg/yarZnpxZ0B8c7EbNNR7Sys0dNdCFhGPbQCLcBGAs/s1600/mcdonalds.jpg" alt="" width="135" height="100"></a>
 
 						<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 							<span class="navbar-toggler-icon"></span>
