--- a/src/app/componentes/inicio/inicio.component.html
+++ b/src/app/componentes/inicio/inicio.component.html
@@ -1,1 +1,60 @@
-<p>inicio works!</p>
+
+  <body>
+    Inicio
+  </body>
+  <br>
+
+  <!--Hey! This is the original version
+  of Simple CSS Waves-->
+
+
+    <div class="header">
+
+
+
+      <div class="card">
+        <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
+          <img
+            src="https://www.cdc.gov/foodsafety/images/comms/features/GettyImages-1247930626-500px.jpg"
+            class="img-fluid"
+          />
+          <a href="#!">
+            <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
+          </a>
+        </div>
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">
+            Visualize todos los productos que se encuentran dentro de la aplicacion presionando el siguiente Boton
+          </p>
+          <button type="button" class="btn btn-outline-success" routerLink='/producto' routerLinkActive='active'>Productos</button>
+        </div>
+      </div>
+    <br>
+
+    <div class="card">
+      <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
+        <img
+          src="https://www.mcdonalds.co.kr/kor/images/story/img_career02.jpg"
+          class="img-fluid"
+        />
+        <a href="#!">
+          <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
+        </a>
+      </div>
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">
+          Visualize todas las sucursales que se encuentran dentro de la aplicacion presionando el siguiente Boton
+        </p>
+        <button type="button" class="btn btn-outline-success" routerLink='/sucursal' routerLinkActive='active'>Sucursales</button>
+      </div>
+    </div>
+  <br>
+
+      <!--Waves Container-->
+
+      <!--Waves end-->
+
+      </div>
+      <!--Header ends-->
