Creacion de los productos de las sucursales

--- a/src/app/componentes/sucursal/sucursal.component.html
+++ b/src/app/componentes/sucursal/sucursal.component.html
@@ -59,7 +59,9 @@
         <button type="button" class="btn btn-outline-info" data-bs-toggle="modal" data-bs-target="#modalEditarSucursal"
         (click)="ObtenerSucursalesID(suc._id)">Editar</button> ||
         <button type="button" class="btn btn-outline-danger" data-bs-toggle="modal" data-bs-target="#modalEliminarSucursal"
-        (click)="ObtenerSucursalesID(suc._id)">Eliminar</button>
+        (click)="ObtenerSucursalesID(suc._id)">Eliminar</button> <br>
+        <button type="button" class="btn btn-outline-info" class="nav-link"
+        routerLink='/producto-sucursal' routerLinkActive="active">Ver Productos</button>
     </div>
     <br>
     </div>
